# CEP-API

./: .gitignore  README.md
CEP-bun/: README.md  bun.lockb  index.ts  package.json
CEP-bun-sql/: README.md  bun.lockb  index.ts  package.json
CEP-rs/: Cargo.toml
CEP-rs-sql/: .env  Cargo.toml
CEP-rs-sql/migrations/: 20230625001348_ceps.sql
CEP-rs-sql/src/: main.rs  queries.rs
CEP-rs/src/: cep.rs  main.rs  rb_file.rs
